# label-me-labeled

./: .gitignore  README.md  precheck.py  pyproject.toml  requirements.txt
legal_drive_labels_manager/: __init__.py  __main__.py  setup.py
legal_drive_labels_manager/appsscript/: README.md  appsscript.json  main.gs
legal_drive_labels_manager/auth/: __init__.py  credentials.py  token_security.py
legal_drive_labels_manager/cli/: commands.py  interactive.py
legal_drive_labels_manager/files/: __init__.py  manager.py  operations.py
legal_drive_labels_manager/labels/: __init__.py  fields.py  manager.py
legal_drive_labels_manager/reporting/: __init__.py  statistics.py  visualization.py
legal_drive_labels_manager/utils/: __init__.py  config.py  confirmation.py  formatting.py  logging.py  progress.py
tests/: __init__.py  test_auth.py  test_files.py  test_labels.py
